--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,24 @@
-remote_theme: no-style-please
+title: Alex Manson # name of the site
+author: Alex Manson # name of site's author
+email: dev@neurowinter.com # email of site's author
+url: https://neurowinter.github.io/ # root address of the site
+description: > # description of the site (multiple lines allowed)
+  Hacker, NLP enthusiast, ML/AI engineer
+permalink: /:slug.html
+
+favicon: "./logo.png" # relative path to site's favicon
+# goat_counter: "yoursitename" # put your GoatCounter name if you want to use GoatCounter analytics
+
+remote_theme: riggraz/no-style-please
+theme_config:
+  appearance: "auto" # can be "light", "dark" or "auto"
+  back_home_text: ".." # customize text for homepage link in post layout
+  date_format: "%d-%m-%Y" # customize how date is formatted
+  show_description: false # show blog description in home page
+
+sass:
+  style: :compressed
+
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
