--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,6 @@
 repos:
-- repo: https://github.com/gruntwork-io/pre-commit
-  rev: v0.1.12 # Get the latest from: https://github.com/gruntwork-io/pre-commit/releases
+- repo: git://github.com/kintoandar/pre-commit.git
+  sha: v2.1.2
   hooks:
-    - id: terraform-validate
-    - id: terraform-fmt
-- repo: git://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.50.0 # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
-  hooks:
-    - id: checkov
+  - id: terraform_fmt
+  - id: terraform_validate
