--- a/.github/workflows/tfscan.yml
+++ b/.github/workflows/tfscan.yml
@@ -15,8 +15,4 @@ jobs:
         iac_version: 'v14'
         policy_type: 'aws'
         only_warn: true
-        sarif_upload: true
-    - name: Upload SARIF file
-      uses: github/codeql-action/upload-sarif@v1
-      with:
-        sarif_file: terrascan.sarif
+        verbose: true
