--- a/.github/workflows/tfsec_pr_commenter.yml
+++ b/.github/workflows/tfsec_pr_commenter.yml
@@ -8,9 +8,9 @@ jobs:
 
     steps:
       - name: Clone repo
-        uses: actions/checkout@v0.1.7
+        uses: actions/checkout@master
 
       - name: tfsec
-        uses: aquasecurity/tfsec-pr-commenter-action@main
+        uses: aquasecurity/tfsec-pr-commenter-action@v0.1.7
         with:
           github_token: ${{ github.token }}
