Added downloading of external modules to checkov

--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -13,4 +13,5 @@ jobs:
         uses: bridgecrewio/checkov-action@master
         with:
           directory: tf/
+          download_external_modules: true
           config_file: .github/workflows/checkov.yml
