Actully added the deploy to S3

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,3 +39,7 @@ jobs:
 
     - name: Build
       uses: jerryjvl/jekyll-build-action@v1
+
+    - name: Sync output to S3
+      run: |
+        aws s3 sync ./_site/ s3://neurowinter-prod-personal-site-origin --delete
