--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,20 +20,20 @@ jobs:
     - name: Terraform Init
       run: terraform init
       env:
-        TF_ACTION_WORKING_DIR: './tf/'
+        TF_ACTION_WORKING_DIR: './tf'
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         
     - name: Terraform validate
       run: terraform validate
       env:
-        TF_ACTION_WORKING_DIR: './tf/'
+        TF_ACTION_WORKING_DIR: './tf'
 
     - name: Terraform Apply
       run: terraform apply -auto-approve
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        TF_ACTION_WORKING_DIR: './tf/'
+        TF_ACTION_WORKING_DIR: './tf'
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
