--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,27 +15,23 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v2
 
-    - name: show contents
-      run: |
-        ls -la tf/
-
     - name: Terraform Setup
       uses: hashicorp/setup-terraform@v1
       
     - name: Terraform Init
-      run: terraform init
+      run: cd tf && terraform init
       env:
         TF_ACTION_WORKING_DIR: './tf'
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         
     - name: Terraform validate
-      run: terraform validate
+      run: cd tf && terraform validate
       env:
         TF_ACTION_WORKING_DIR: './tf'
 
     - name: Terraform Apply
-      run: terraform apply -auto-approve
+      run: cd tf && terraform apply -auto-approve
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         TF_ACTION_WORKING_DIR: './tf'
