--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ url: https://neurowinter.github.io/ # root address of the site
 description: > # description of the site (multiple lines allowed)
   Hacker, NLP enthusiast, ML/AI engineer
 permalink: /:slug.html
+repository: NeuroWinter/neurowinter.github.io
 
 favicon: "./logo.png" # relative path to site's favicon
 # goat_counter: "yoursitename" # put your GoatCounter name if you want to use GoatCounter analytics
