--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,14 +4,12 @@ on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
   Terraform:
     name: Terraform Plan & Apply
     runs-on: ubuntu-latest
     steps:
-
     - name: Checkout Repo
       uses: actions/checkout@v2
 
@@ -35,9 +33,13 @@ jobs:
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-    - name: Build
-      uses: jerryjvl/jekyll-build-action@v1
+  Jekyll:
+    name: Build and deploy Jekyll
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build
+        uses: jerryjvl/jekyll-build-action@v1
 
-    - name: Sync output to S3
-      run: |
-        AWS_EC2_METADATA_DISABLED=true AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}  aws s3 sync ./_site/ s3://neurowinter-prod-personal-site-origin --delete --debug
+      - name: Sync output to S3
+        run: |
+          AWS_EC2_METADATA_DISABLED=true AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}  aws s3 sync ./_site/ s3://neurowinter-prod-personal-site-origin --delete --debug
