Changed other actions to look in the right place

--- a/.github/workflows/tfscan.yml
+++ b/.github/workflows/tfscan.yml
@@ -12,6 +12,7 @@ jobs:
       uses: accurics/terrascan-action@main
       with:
         iac_type: 'terraform'
+        iac_dir: "./tf"
         iac_version: 'v14'
         policy_type: 'aws'
         only_warn: true
