--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Alex Manson # name of the site
 author: Alex Manson # name of site's author
 email: dev@neurowinter.com # email of site's author
+baseurl: ""  # Weird issue here if this was not set then `pages/Neurowinter` was added to the css url
 url: https://neurowinter.github.io/ # root address of the site
 description: > # description of the site (multiple lines allowed)
   Hacker, NLP enthusiast, ML/AI engineer
@@ -8,7 +9,7 @@ permalink: /:slug.html
 repository: NeuroWinter/neurowinter.github.io
 
 favicon: "./logo.png" # relative path to site's favicon
-# goat_counter: "yoursitename" # put your GoatCounter name if you want to use GoatCounter analytics
+goat_counter: "neurowinter" # put your GoatCounter name if you want to use GoatCounter analytics
 
 remote_theme: riggraz/no-style-please
 theme_config:
