--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,29 @@ title: Alex Manson # name of the site
 author: Alex Manson # name of site's author
 email: dev@neurowinter.com # email of site's author
 baseurl: ""  # Weird issue here if this was not set then `pages/Neurowinter` was added to the css url
-url: https://neurowinter.github.io/ # root address of the site
-description: > # description of the site (multiple lines allowed)
+url: https://neurowinter.com/ # root address of the site
+tagline: > # description of the site (multiple lines allowed)
   Hacker, NLP enthusiast, ML/AI engineer
-permalink: /:slug.html
+description: > # description of the site (multiple lines allowed)
+  A collection of my learnings in all things Python, AI, MLOPS, NLP, Software engineering, and Bug Bounty Hunting.
+permalink: pretty
 repository: NeuroWinter/neurowinter.github.io
 
 favicon: "./logo.png" # relative path to site's favicon
 goat_counter: "neurowinter" # put your GoatCounter name if you want to use GoatCounter analytics
+  
+# Here are a bunch of SEO things
+twitter:
+  username: NeuroWinter
+  card: summary
+
+social:
+  name: Alex Manson
+  links:
+    - https://twitter.com/NeuroWinter
+    - https://octodon.social/@NeuroWinter
+
+google_site_verification: Cg3NHpLRBqjYq_ZQHk1IJSEAiWLub7eZ-V4E5lkacxE
 
 remote_theme: riggraz/no-style-please
 theme_config:
@@ -24,3 +39,4 @@ sass:
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-sitemap
