Added Blog post

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,6 @@ author: Alex Manson # name of site's author
 email: dev@neurowinter.com # email of site's author
 baseurl: ""  # Weird issue here if this was not set then `pages/Neurowinter` was added to the css url
 url: https://neurowinter.com # root address of the site
-tagline: > # description of the site (multiple lines allowed)
-  Hacker, NLP enthusiast, ML/AI engineer
 description: > # description of the site (multiple lines allowed)
   A collection of my learnings in all things Python, AI, MLOPS, NLP, Software engineering, and Bug Bounty Hunting.
 permalink: pretty
@@ -14,6 +12,8 @@ favicon: "./logo.png" # relative path to site's favicon
 goat_counter: "neurowinter" # put your GoatCounter name if you want to use GoatCounter analytics
   
 # Here are a bunch of SEO things
+icon: "./logo.png" # relative path to site's favicon
+
 twitter:
   username: NeuroWinter
   card: summary
