--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ description: > # description of the site (multiple lines allowed)
   A collection of my learnings in all things Python, AI, MLOPS, NLP, Software engineering, and Bug Bounty hunting.
 permalink: pretty
 repository: NeuroWinter/neurowinter.github.io
+timezone: Pacific/Auckland
 
 favicon: "./logo.png" # relative path to site's favicon
 goat_counter: "neurowinter" # put your GoatCounter name if you want to use GoatCounter analytics
