--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,9 @@ social:
     - https://www.linkedin.com/in/alex-manson/
 
 google_site_verification: Cg3NHpLRBqjYq_ZQHk1IJSEAiWLub7eZ-V4E5lkacxE
+google_analytics: G-6DKEYWKCBN
 
-remote_theme: riggraz/no-style-please
+remote_theme: ipasechnikov/no-style-please
 theme_config:
   appearance: "auto" # can be "light", "dark" or "auto"
   back_home_text: ".." # customize text for homepage link in post layout
