--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -12,3 +12,5 @@ entries:
   - title: posts
     post_list:
       limit: 10
+      show_more_text: "See all posts"
+      show_more_url: "archive.html"
