feat: added manual categories on front page

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -9,5 +9,8 @@ entries:
       - title: <a rel="me" href='https://tilde.zone/@NeuroWinter'>Mastodon</a>
       - title: <a rel="me" href='https://bsky.app/profile/neurowinter.bsky.social'>Bsky</a>
 
-  - title: posts
+  - title: <a href='/categories/'>posts by category</a>
+
+  - title: recent posts
     post_list: true
+
