--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@ email: dev@neurowinter.com # email of site's author
 baseurl: ""  # Weird issue here if this was not set then `pages/Neurowinter` was added to the css url
 url: https://neurowinter.com # root address of the site
 description: > # description of the site (multiple lines allowed)
-  A collection of my learnings in all things Python, AI, MLOPS, NLP, Software engineering, and Bug Bounty hunting.
+  Security researcher and SRE. Writing about vulnerability research, AI, and the practical stuff I figure out along the way.
 permalink: pretty
 repository: NeuroWinter/neurowinter.github.io
 timezone: Pacific/Auckland
 
 favicon: "./logo.png" # relative path to site's favicon
 goat_counter: "neurowinter" # put your GoatCounter name if you want to use GoatCounter analytics
-  
+
 # Here are a bunch of SEO things
 icon: "./logo.png" # relative path to site's favicon
 
